--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,19 @@ input, button {
     font-family: inherit;
     padding: 0;
     outline: none;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+     appearance: none;
 }
+
+select {
+    border: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+}
+
 
 .header {
     position: relative;
@@ -395,7 +407,7 @@ input, button {
     width: 100%;
 }
 
-.aside__field {
+.field {
     width: 100%;
     height: 48px;
     background-color: #f4f7f6;
@@ -411,7 +423,7 @@ input, button {
     width: calc(100% - 48px);
 }
 
-.aside__field:focus {
+.field:focus {
     border-bottom: solid #b59f5b;;
 }
 
@@ -696,6 +708,150 @@ input, button {
     margin-bottom: 47px;
 }
 
+.popup {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    height: 100vh;
+
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 2;
+
+    box-sizing: border-box;
+    padding-top: 54px;
+}
+
+.popup__window {
+    max-width: 330px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 546px;
+    background-color: #fff;
+
+    box-sizing: border-box;
+    padding-bottom: 45px;
+    position: relative;
+}
+
+.popup__close {
+    position: relative;
+
+    width: 30px;
+    height: 30px;
+
+    background-image: url(../svg/form-x.svg);
+    background-repeat: no-repeat;
+    background-size: 30px;
+
+    top: -40px;
+    left: 300px;
+
+}
+
+.popup__wrp {
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.label {
+    font-size: 13px;
+    font-weight: 400;
+}
+.popup__attendance {
+    width: 100%;
+}
+
+.popup__attendance-select {
+    text-transform: none;
+
+    background-image: url(../svg/form-arrows.svg);
+    background-repeat: no-repeat;
+    background-position: right 15px center;
+    background-size: 10px;
+}
+
+.popup__attendance-label{
+    margin-bottom: 10px;
+    margin-top: 17px;
+    display: inline-block;
+}
+
+.popup__subscription {
+    width: 100%;
+}
+
+.popup__subscription-heading {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.popup__subscription-radio {
+    display: none;
+}
+
+.popup__subscription-option::before {
+    content: "";
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+
+    margin-right: 7px;
+    vertical-align: top;
+
+    background-image: url(../svg/form-empty-circle.svg);
+    background-repeat: no-repeat;
+    background-size: 25px;
+    background-position: left center;
+}
+
+.popup__subscription-radio:checked ~ .popup__subscription-option::before {
+    background-image: url(../svg/form-circle.svg);
+}
+
+.popup__subscription-option {
+    font-size: 13px;
+    font-weight: 400;
+}
+
+.popup__subscription-radiolabel:nth-child(n+2) {
+    margin-right: 30px;
+}
+
+.popup__request-label {
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.popup__request-field {
+    width: 100%;
+    height: 131px;
+
+    box-sizing: border-box;
+    padding-left: 23px;
+    padding-right: 23px;
+    padding-top: 23px;
+    padding-bottom: 100px;
+
+    background-color: #f4f7f6;
+}
+
+.popup__button {
+    width: 100%;
+    height: 48px;
+    background-color: #b59f5b;
+
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+
+}
+
 @media (min-width: 641px) {
     .header{
         background-image: url(../images/banner-bg-tablet.jpg);
@@ -869,6 +1025,14 @@ input, button {
     .footer {
         margin-top: 7px;
     }
+
+    .popup {
+        padding-top: 235px;
+    }
+
+    .popup__window {
+        width: 390px;
+    }
 }
 
 @media (min-width: 1201px) {
@@ -1022,5 +1186,4 @@ input, button {
             margin-top: 43px;
             margin-bottom: 72px;
         }
-
 }
