--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 
 body {
     margin: 0;
+    padding: 0;
     font-family: OpenSans, sans-serif;
 }
 
@@ -31,7 +32,7 @@ ul, li, a {
     margin: 0;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5 {
     margin: 0;
 }
 
@@ -63,13 +64,12 @@ select {
     background-position: center center;
     background-color: #888;
 
-    max-height: 100vh;
-
     box-sizing: border-box;
     padding-top: 26px;
     padding-bottom: 213px;
     padding-left: 15px;
     padding-right: 11px;
+    text-align: center;
 }
 
 .header::after {
@@ -112,6 +112,8 @@ select {
     margin-top: 168px;
     margin-left: 30px;
     margin-right: 36px;
+
+    max-width: 271px;
 }
 
 .header__logo-nav {
@@ -135,11 +137,16 @@ select {
     margin-bottom: 44px;
 }
 
+.trends-flex {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2px;
+}
+
 .heading-flex {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    height: 100%;
 }
 
 .trends-heading {
@@ -180,6 +187,7 @@ select {
     
     box-sizing: border-box;
     padding-bottom: 15px;
+    padding-top: 15px;
 
     position: relative;
 
@@ -204,9 +212,6 @@ select {
     background-image: url(../images/trend4.jpg);
 }
 
-.trends-card:nth-child(n+2) {
-    margin-top: 2px;
-}
 
 .trends-card::after {
     content: "";
@@ -343,26 +348,25 @@ select {
     line-height: 0;
 }
 
-.main__posts-divider {
+.main__posts-article::after {
+    content: "";
+    display: block;
+
     background-color: #eee;
     width: 100%;
     height: 3px;
 
     margin-top: 23px;
     margin-bottom: 35px;
+
 }
 
-.main__posts-divider:last-child {
-    margin-bottom: 40px;
+.main__posts {
+    margin-bottom: 41px;
 }
-
-.main__posts__divider:last-child {
-    margin-bottom: 40px;
-}
-
 
 .aside__heading {
-    margin-bottom: 40px;
+    margin-bottom: 41px;
 }
 
 .aside__post {
@@ -574,15 +578,30 @@ select {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
+
+    gap: 26px;
+}
+
+.shop__item {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: -35px;
+}
+
+.shop__pictures {
+    width: 100%;
 }
 
 .shop__picture {
-    margin-left: 20px;
-    margin-right: 24px;
-
     position: relative;
     color: #f4f3f1;
+}  
+    
+.picture-setting {
+    width: 88%;
+    aspect-ratio: 1 / 1;
+    margin-left: 18px;
 }
 
 .shop__border {
@@ -598,7 +617,7 @@ select {
     position: relative;
     top: -35px;
 
-    margin-bottom: -9px;
+    height: 100%;
 }
 
 .shop__cardheading {
@@ -620,6 +639,12 @@ select {
 .shop__link {
     color: #b59f5b;
     text-decoration: underline #b59f5b;
+}
+
+.shop__wrpprice {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 
@@ -660,7 +685,7 @@ select {
     background-color: #f4f7f6;
     padding-top: 28px;
     padding-bottom: 30px;
-    margin-top: 18px;
+    margin-top: 45px;
     margin-bottom: 48px;
 }
 
@@ -860,8 +885,6 @@ select {
     }
 
     .trends-flex {
-        display: flex;
-        flex-wrap: wrap;
         gap: 4px;
     }
 }
@@ -897,8 +920,9 @@ select {
 
     .header__heading {
         font-size: 40px;
-        margin-left: 32px;
-        margin-right: 39px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 611px
 
     }
 
@@ -916,8 +940,6 @@ select {
     }
 
     .trends-flex {
-        display: flex;
-        flex-wrap: wrap;
         gap: 4px;
       
     }
@@ -952,19 +974,23 @@ select {
     .wrp {
         padding-left: 35px;
         padding-right: 35px;
+        margin: 0;
+
+        width: 100%;
+        box-sizing: border-box;
+    
     }
 
     .wrp__flex {
         display: flex;
-        flex-wrap: nowrap;
-        justify-content: space-between;
-
         gap: 34px;
     }
 
     .main {
-        width: calc(59% - 17px);
+        width: 100%;
+        margin-bottom: 0;
     }
+
 
     .main__posts-picture {
         height: 303px;
@@ -979,7 +1005,7 @@ select {
         margin-bottom: 30px;
     }
 
-    .main__posts-divider {
+    .main__posts-article::after {
         margin-top: 20px;
         margin-bottom: 42px;
     }
@@ -989,7 +1015,8 @@ select {
     }
 
     .aside {
-        width: calc(41% - 17px);
+        flex-basis: 271px;
+        flex-shrink: 0;
     }
 
     .aside__heading {
@@ -1024,8 +1051,18 @@ select {
         margin-top: 0;
     }
 
+    .shop__wrp {
+        gap: 24px;
+    }
+
     .shop__item {
         width: calc(50% - 12px);
+    }
+
+    .picture-setting {
+        width: 88%;
+        aspect-ratio: 1/0.78;
+        margin-right: 18px;
     }
 
     .shop__border {
@@ -1037,7 +1074,7 @@ select {
     }
 
     .footer {
-        margin-top: 7px;
+        margin-top: 30px;
     }
 
     .popup {
@@ -1060,8 +1097,8 @@ select {
         background-image: url(../images/banner-bg.jpg);
 
         padding-top: 30px;
-        padding-left: 250px;
-        padding-right: 250px;
+        padding-left: 245px;
+        padding-right: 245px;
         padding-bottom: 125px;
     }
 
@@ -1096,8 +1133,9 @@ select {
     .header__heading {
         font-size: 45px;
 
-        margin-left: 215px;
-        margin-right: 215px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 690px;
 
         line-height: 1.6;
     }
@@ -1141,16 +1179,15 @@ select {
     }
 
     .wrp {
-        width: 71%;
+        width: 1170px;
         margin: 0 auto;
         padding-left: 0;
         padding-right: 0;
     }
 
-    .main {
-        width: 67%;
+    .wrp__flex {
+        gap: 115px;
     }
-
 
     .main__posts-article {
         display: flex;
@@ -1160,6 +1197,7 @@ select {
 
     .main__posts-picture {
         height: 294px;
+        width: fit-content;
     }
 
     .main__post-categories {
@@ -1176,14 +1214,9 @@ select {
         margin-bottom: 45px;
     }
 
-    .main__posts-divider {
+    .main__posts-article::after {
         display: none;
     }
-
-    .aside {
-        width: 23%;
-    }
-
 
     .shop__heading {
         font-size: 20px;
@@ -1194,16 +1227,27 @@ select {
         justify-content: space-between;
         }
 
-        .shop__item {
+    .shop__item {
             width: 30%;
         }
+    
+    .shop__border {
+            height: 100%;
+            display: flex;
+            flex-wrap: wrap;
+        }
 
-        .shop__cardheading {
+    .shop__cardheading {
             font-size: 20px;
         }
 
-        .footer {
-            margin-top: 43px;
+    .picture-setting {
+        width: 86%;
+        aspect-ratio: 1 / 0.68;
+    }    
+
+    .footer {
+            margin-top: 73px;
             margin-bottom: 72px;
         }
 }
